--- a/Pizza2/MainWindow.xaml
+++ b/Pizza2/MainWindow.xaml
@@ -14,28 +14,28 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Row="0" Text="here are your pizzas you fucking fat slob"  Margin="1" TextAlignment="Center"/>
+            <TextBlock Grid.Row="0" Text="Cart"  Margin="1" TextAlignment="Center"/>
             <TextBlock x:Name="CartTotalPrice">
                 
             </TextBlock>
             <ScrollViewer Margin="3" VerticalAlignment="Top" Grid.Row="1">
                 <StackPanel>
-                    <TextBlock Text="pizzas"/>
+                    <TextBlock Text="Pizzas" FontSize="18"/>
                     <ItemsControl x:Name="pizlist" ItemsSource="{Binding}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate DataType="{x:Type local:Pizza}">
-                                <Grid>
+                                <Grid Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="4*" />
+                                        <ColumnDefinition Width="5*" />
+                                        <ColumnDefinition Width="1*" />
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="25"/>
                                     </Grid.RowDefinitions>
                                     <TextBlock Text="{Binding Name}" Grid.Column="0"/>
-                                    <Button Click="EditPizza" Content="Change" Height="30" Width="30" Grid.Column="1"></Button>
-                                    <Button Click="RemovePizza" Content="🗙" Height="30" Width="30" Grid.Column="2"></Button>
+                                    <Button Click="EditPizza" Content="Change" Height="25" Width="60" Grid.Column="1"></Button>
+                                    <Button Click="RemovePizza" Content="🗙" Height="25" Width="25" Grid.Column="2"></Button>
                                 </Grid>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -43,17 +43,17 @@
                     <Button Click="NewPizza" Content="+" Height="25" Width="50" HorizontalAlignment="Left"/>
                     
                     
-                    <TextBlock Text="drinks"/>
+                    <TextBlock Text="Drinks" FontSize="18"/>
                     <ItemsControl x:Name="drinkslist" ItemsSource="{Binding}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate DataType="{x:Type local:Drink}">
-                                <Grid>
+                                <Grid Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="3*" />
+                                        <ColumnDefinition Width="2*" />
+                                        <ColumnDefinition Width="2*" />
+                                        <ColumnDefinition Width="2*" />
+                                        <ColumnDefinition Width="1*" />
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="25"/>
@@ -63,7 +63,7 @@
                                     <RadioButton Name="sizeSmall" DataContext="{Binding}" BindingGroup="{Binding DrinkSize}" Checked="RadioButton_Checked" Grid.Column="1" IsChecked="True">small</RadioButton>
                                     <RadioButton Name="sizeMedium" DataContext="{Binding}" BindingGroup="{Binding DrinkSize}" Checked="RadioButton_Checked" Grid.Column="2">medium</RadioButton>
                                     <RadioButton Name="sizeLarge" DataContext="{Binding}" BindingGroup="{Binding DrinkSize}" Checked="RadioButton_Checked" Grid.Column="3">large</RadioButton>
-                                    <Button Click="RemoveDrink" Content="🗙" Height="30" Width="30" Grid.Column="4"></Button>
+                                    <Button Click="RemoveDrink" Content="🗙" Height="25" Width="25" Grid.Column="4"></Button>
                                 </Grid>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -106,15 +106,15 @@
                             <DataTemplate DataType="{x:Type local:Ingredient}">
                                 <Grid>
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="9*" />
+                                        <ColumnDefinition Width="1*" />
                                     </Grid.ColumnDefinitions>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="25"/>
                                     </Grid.RowDefinitions>
                                     <ComboBox Grid.Column="0" SelectedIndex="0" SelectionChanged="ComboBoxIngredients_SelectionChanged"  ItemsSource="{Binding IngredientsListCopy}" DisplayMemberPath="Name" SelectedItem="{Binding Path=Name, Mode=TwoWay}"/>
 
-                                    <Button Click="RemoveTopping"  Content="🗙" Height="30" Width="30" Grid.Column="1"></Button>
+                                    <Button Click="RemoveTopping"  Content="🗙" Height="25" Width="25" Grid.Column="1"></Button>
                                 </Grid>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
